# whittaker-eilers

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
benches/: whittaker.rs
examples/: smooth_and_interpolate.rs
src/: cross_validation.rs  errors.rs  lib.rs  whittaker_smoother.rs
tests/: faer.rs  mod.rs  robustness.rs  validation.rs
tests/data/input/: Readme.md
tests/data/original_scripts/: demo_standard_whittaker.m  demo_x_input_weighted_whittaker.m  demo_x_input_whittaker.m  readme.md  whitsm.m  whitsmw.m
tests/data/output/: Readme.md  output_only_y_2e4_2.csv  output_only_y_2e4_3.csv  output_x_and_y_2e4_2.csv  output_x_and_y_2e4_3.csv  output_x_y_and_weights_2e4_2.csv  output_y_with_weights_2e4_2.csv
tests/original_scripts/: README.md  ddmat.m  demo_nmrcv.m  demo_standard_whittaker.m  demo_weighted_whittaker.m  demo_wood_cross_val.m  demo_x_input_weighted_whittaker.m  demo_x_input_whittaker.m  whitsm.m  whitsmdd.m  whitsmddw.m  whitsmw.m
whittaker-eilers-py/: Cargo.toml  README.md  pyproject.toml  whittaker_eilers.pyi
whittaker-eilers-py/examples/: cross_validation.py  graph.txt  parallel_smoothing.py  requirements.txt  smooth_and_interpolate.py  whittaker_benchmark.py  whittaker_compare_interp.py
whittaker-eilers-py/examples/cross_validation_article/: README.md  article_plots.py  benchmark.py  mse_vs_cve.py  plot_multiple_lambda.py
whittaker-eilers-py/src/: cross_validation.rs  errors.rs  lib.rs  whittaker_smoother.rs
whittaker-eilers-py/tests/python/: test.py
whittaker-eilers-rs/: Cargo.toml
whittaker-eilers-rs/benches/: README.md
whittaker-eilers-rs/examples/: README.md
whittaker-eilers-rs/tests/: README.md  mod.rs
whittaker-eilers-rs/tests/data/original_scripts/: demo_weighted_whittaker.m
whittaker-eilers-rs/tests/data/output/: output_x_y_and_random_weights_2e4_2.csv  output_y_with_random_weights_2e4_3.csv
