[package]
name = "whittaker-eilers"
version = "0.1.1"
edition = "2021"

description = "A sparse matrix implementation of Whittaker-Eilers smoothing and interpolation"
authors = ["Andrew Bowell <andrewbowell@mail.com>"]
license = "MIT OR Apache-2.0"
exclude = ["target/*", "whittaker-eilers-py/*"]
keywords = ["smoothing", "interpolation", "filter", "signal-processing"]
categories = ["algorithms", "mathematics", "science"]
repository = "https://github.com/AnBowell/whittaker-eilers"
homepage = "https://github.com/AnBowell/whittaker-eilers"
documentation = "https://docs.rs/whittaker-eilers/latest/whittaker_eilers/"
readme = "README.md"


[dependencies]
sprs = "0.11.1"
sprs-ldl = "0.10.0"


[dev-dependencies]
plotly = "0.8.4"
approx = "0.5.1"
criterion = "0.5.1"
rand = "0.8.5"
rand_distr = "0.4.3"


[[bench]]
name = "whittaker"
harness = false

[workspace]
members = ["whittaker-eilers-py"]
