[package]
name = "whittaker-eilers-py"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "whittaker_eilers"
# "cdylib" is necssary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
whittaker-eilers-rs = { package = "whittaker-eilers", path = "../" }

[dependencies.pyo3]
version = "0.19.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py37"]
